force-app/main/default/objects/Lead/fields/isTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>isTerraqueo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marca sempre que o possível herói for da terra</description>
    <inlineHelpText>Marca sempre que o possível herói for da terra</inlineHelpText>
    <label>É terráqueo?</label>
    <type>Checkbox</type>
</CustomField>