force-app/main/default/objects/Lead/fields/Nomedeguerra__c.field-meta.xml
<CustomField>
    <fullName>Nomedeguerra__c</fullName>
    <description>insira um nome de guerra para o seu contato</description>
    <inlineHelpText>insira um nome de guerra para o seu contato</inlineHelpText>
    <label>Nome de guerra</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>