force-app/main/default/objects/Lead/fields/Planeta__c.field-meta.xml
<CustomField>
    <fullName>Planeta__c</fullName>
    <description>esse campo deve ser preenchido sempre que a opção &quot;É Terráqueo&quot; estiver desmarcada</description>
    <inlineHelpText>esse campo deve ser preenchido sempre que a opção &quot;É Terráqueo&quot; estiver desmarcada. caso contrario não e obrigatório</inlineHelpText>
    <label>Planeta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>