force-app/main/default/objects/Lead/validationRules/ExigePlanetaQuandoNaoeTeraqueo.validationRule-meta.xml
<ValidationRule>
    <fullName>ExigePlanetaQuandoNaoeTeraqueo</fullName>
    <active>true</active>
    <description>Formula pra verificar se preenchimento do campo &quot;Planeta&quot; quando n e terráqueo</description>
    <errorConditionFormula>AND(
				NOT(isTerraqueo__c),
	ISBLANK( Planeta__c )
	)</errorConditionFormula>
    <errorDisplayField>Planeta__c</errorDisplayField>
    <errorMessage>Favor Preencher este campo, Sempre que o possível Herói NÂO e da terra</errorMessage>
</ValidationRule>